--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -8,4 +8,9 @@
         Published {{ post.publish }} by {{ post.author }}
     </p>
     {{ post.body|linebreaks }}
+    <p>
+        <a href="{% url 'blog:post_share' post_id=post.id %}">
+            Share this post
+        </a>
+    </p>
 {% endblock %}
