--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,10 +17,15 @@
     <div id="sidebar">
         <h2>My Blog</h2>
         <p>This is my blog. I've written {% total_posts %} posts so far.</p>
-
+        
+        <p>
+            <a href="{% url 'blog:post_feed' %}">Subscribe to my RSS feed</a>
+        </p>
         <!-- This shows the 3 latest posts -->
         <h3>Latest posts</h3>
         {% show_latest_posts 3 %}
+
+        
 
         <!-- Here we get the most commented posts ever -->
         <h3>Most commented posts</h3>
